CHANGE LOG

2011-06-29

* fixed display issue on author details view whene the author had multiple email addresses
* fixed display issue of gravatar on pod details view

2011-06-27

* Removed erroneous 'l' in the podView template
* Changed the Google Groups link to https://groups.google.com/forum/#!forum/cpan-api due to issue with Google Grooups changing their URL scheme.  Fixes issues #31.

2011-06-04

* ported to use the new MetaCPAN API

2011-03-18

* combined the module name and description columns into one column on all search results tables

2011-02-14

* fixed issue with description column causing the html to break when the module/dist description contained greater than or less than signs
* fixed issue where urls that that had escaped characters would not work except in Firefox
* now using json instead of jsonp ajax calls -- this fixes an issue with the loader image never disappearing when searching an invalid author
* the tweet button now has via @metacpan as the default text instead of via @ioncache

2011-01-09

* added a change log to the homepage
* added links to CPAN Testers and Dependencies to the dist details page
* added dist description to the dist details page

2011-01-07

* added module and dist abstracts to all result tables
