@@ -1,1 +1,3 @@
 Proof of concept site for using api.metacpan.org
+
+This site is now available at http://js.metacpan.org
