@@ -2,7 +2,7 @@
 
 server {
 
-    server_name  search.metacpan.org;
+    server_name  js.metacpan.org;
 
     access_log  /home/metacpan/search.metacpan.org/logs/access.log;
     error_log   /home/metacpan/search.metacpan.org/logs/error.log;
@@ -38,5 +38,13 @@ server {
     gzip_disable       "MSIE [1-6]\.";
 
     #error_page  404  /404.html;
+
+}
+
+server {
+
+    server_name search.metacpan.org
+    
+    
 
 }
