@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
 
-        <title>search.metacpan.org</title>
+        <title>js.metacpan.org</title>
         
         <meta name="description" content="Proof of concept interface for using http://api.metacpan.org." />
         <meta name="keywords" content="Perl,Perl Module,CPAN,Search CPAN" />
@@ -62,7 +62,7 @@
         <script id="homeView" type="text/html">
             <div id="home_contents" class="info ui-widget ui-widget-content ui-corner-all">
                 <p>
-                    Welcome to <strong>search.metacpan.org</strong>
+                    Welcome to <strong>js.metacpan.org</strong>
                 </p>
                 <p>
                     This site is a front-end for <a href="http://api.metacpan.org" title="The CPAN-API">api.metacpan.org</a>.
